gait_analysis_mobile_app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gait-analysis
  labels:
    name: gait-analysis
    app: gait-analysis-pro
    environment: production
